--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
     "start": "node ./bin/pbiviz.js",
-    "test": "npm run clean-tests && npm run jscs && npm run jshint && npm run jasmine",
+    "test": "npm run clean-tests && npm run eslint && npm run jasmine",
     "jasmine": "node spec/jasmine-runner.js",
     "jasmine-inspect": "node --inspect spec/jasmine-runner.js",
-    "jscs": "jscs bin lib spec",
-    "jshint": "jshint bin lib spec",
+    "eslint": "eslint bin lib spec",
     "clean-tests": "node spec/clean-tests.js",
-    "debug-tests": "npm run clean-tests && npm run jscs && npm run jshint && npm run jasmine-inspect"
+    "debug-tests": "npm run clean-tests && npm run eslint && npm run jasmine-inspect"
   },
   "bin": {
     "pbiviz": "./bin/pbiviz.js"
@@ -29,15 +28,14 @@
   "dependencies": {
     "chalk": "1.1.3",
     "commander": "2.9.0",
-    "connect": "3.4.1",
+    "connect": "^3.6.6",
     "fs-extra": "0.28.0",
     "jsonschema": "1.1.0",
     "jszip": "3.0.0",
-    "less": "2.7.3",
-    "lodash": "4.11.1",
-    "powerbi-visuals-package-validator": "^1.0.1",
+    "less": "^3.8.1",
+    "lodash": "^4.17.11",
     "powerbi-visuals-utils-dataviewutils": "1.2.0",
-    "serve-static": "1.10.2",
+    "serve-static": "^1.13.2",
     "source-map-concat": "1.0.1",
     "typescript": "2.3.3",
     "uglify-js": "2.6.2",
@@ -45,11 +43,10 @@
   },
   "devDependencies": {
     "async": "2.0.1",
+    "eslint": "5.6.1",
     "jasmine": "2.8.0",
-    "jasmine-node": "1.14.5",
+    "jasmine-node": "^2.0.1",
     "jasmine-spec-reporter": "2.5.0",
-    "jscs": "3.0.7",
-    "jshint": "2.9.2",
     "ps-tree": "1.1.0",
     "request": "2.83.0",
     "tree-kill": "^1.1.0",
@@ -59,4 +56,3 @@
     "node": "^6.0.0"
   }
 }
-
