--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.18",
+  "version": "3.1.19",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -31,17 +31,26 @@
     "@babel/preset-env": "7.9.0",
     "@babel/runtime": "7.9.2",
     "@babel/runtime-corejs3": "7.9.2",
+    "assert": "^2.0.0",
     "async": "3.2.0",
     "babel-loader": "^8.1.0",
     "base64-inline-loader": "^1.1.1",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "chalk": "3.0.0",
     "commander": "4.1.1",
     "connect": "3.7.0",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
     "core-js": "3.6.4",
-    "css-loader": "^3.4.2",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^5.2.4",
+    "domain-browser": "^4.19.0",
+    "events": "^3.3.0",
     "extra-watch-webpack-plugin": "^1.0.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^9.1.0",
+    "https-browserify": "^1.0.0",
     "json-loader": "0.5.7",
     "jszip": "3.2.2",
     "less": "^3.11.1",
@@ -50,13 +59,27 @@
     "lodash.defaults": "4.2.0",
     "lodash.isequal": "4.5.0",
     "mini-css-extract-plugin": "^1.4.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "powerbi-visuals-webpack-plugin": "2.2.6",
+    "process": "^0.11.10",
+    "punycode": "^2.1.1",
+    "querystring-es3": "^0.2.1",
+    "readable-stream": "^3.6.0",
     "request": "^2.88.2",
     "serve-static": "1.14.1",
     "source-map-concat": "1.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
+    "timers-browserify": "^2.0.12",
     "ts-loader": "6.2.2",
+    "tty-browserify": "0.0.1",
     "typescript": "3.8.3",
+    "url": "^0.11.0",
+    "util": "^0.12.3",
     "uuid": "7.0.2",
+    "vm-browserify": "^1.1.2",
     "webpack": "^5.28.0",
     "webpack-bundle-analyzer": "3.6.1",
     "webpack-dev-server": "^3.11.2"
